# tenet-db

./: Dockerfile  Makefile  README.md  db.py  init-db.sh  main.py  populate.py  pyproject.toml  tables.py
tables/: abstractions.csv
tenetdb/: __init__.py  config.py  db.py  exc.py  main.py  models.py  populate.py
tenetdb/graphql/: objects.py  query.py  schema.py
tenetdb/tables/: cwe_class.csv  cwes.csv
