[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/epicosy/tenet-db"
homepage = "https://github.com/epicosy/tenet-db"

[project]
name="tenetdb"
version = "0.0.1"
description = "tenet database of vulnerabilities"
readme = "README.md"
authors = [
    {name = "Eduard Pinconschi", email="eduard.pinconschi@tecnico.ulisboa.pt"},
    {name = "Sofia Reis", email="sofia.o.reis@tecnico.ulisboa.pt"}
]
keywords = ["security", "vulnerability", "database"]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers"
]
dependencies = [
    "pandas~=1.3.3",
    "SQLAlchemy==2.0.0",
    "SQLAlchemy-Utils==0.39.0",
    "psycopg2==2.9.5"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "twine>=1.11.0",
    "setuptools>=38.6.0",   
    "wheel>=0.31.0"
]


[tool.setuptools.packages.find]
exclude = ["ez_setup", "tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tenetdb = ["tables/*"]

[project.scripts]
tenetdb = "tenet_db.main:main"
